--- a/zzrs_latex/mro.tex
+++ b/zzrs_latex/mro.tex
@@ -20,7 +20,7 @@
   showstringspaces=false,
   columns=flexible,
   basicstyle={\small\ttfamily},
-  numbers=none,
+  numbers=none,	
   numberstyle=\tiny\color{gray},
   keywordstyle=\color{blue},
   commentstyle=\color{dkgreen},
@@ -54,7 +54,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[cp1250]{inputenc}
 
-\usepackage{fancyhdr} %tole dodano za headerje, da jih lahko definiraš po želji (preostanek je v posameznem chapterju)
+\usepackage{fancyhdr} %tole dodano za headerje, da jih lahko definiraï¿½ po ï¿½elji (preostanek je v posameznem chapterju)
 
 \usepackage{multicol} %Sk9
 
@@ -90,7 +90,7 @@
 \begin{document}
 
 \author{Uredil prof. dr. Miha Mraz}
-\title{Analiza zmogljivosti oblaènih in strežniških storitev}
+\title{Analiza zmogljivosti oblaï¿½nih in streï¿½niï¿½kih storitev}
 \date{Maj 2017}
 \maketitle
 
